--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-
+<script src="zh/core.js"></script>
 	<nav>
 		<a href="#menu" class="toggle-state nav-menu">
 			<div class="title">Menu</div>
@@ -348,6 +348,10 @@
 		<script src="scripts/all_seeing.js"></script>
 		<script src="http://deathraygames.com/js/ga.js"></script>
 	</div>
+	<!--客服 开始-->
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
 	
 </body>
 </html>
