--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Conspiracy Clicker by Deathray Games</title>
+	<title>阴谋点击器 - Conspiracy Clicker by Deathray Games</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<link rel="stylesheet" href="styles/notifier.css" />
 	<link rel="stylesheet" href="styles/walkthrough.css" />
@@ -10,7 +10,8 @@
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-
+<script src="chs.js?202106041511"></script>
+<script src="//g8hh.com/zh/core.js"></script>
 	<nav>
 		<a href="#menu" class="toggle-state nav-menu">
 			<div class="title">Menu</div>
@@ -346,8 +347,16 @@
 		<script src="scripts/libs/jquery-3.1.1.min.js"></script>
 		<script src="scripts/rocketboots/core.js"></script>
 		<script src="scripts/all_seeing.js"></script>
-		<script src="http://deathraygames.com/js/ga.js"></script>
+<!--		<script src="http://deathraygames.com/js/ga.js"></script>-->
 	</div>
 	
 </body>
 </html>
+<!--客服 开始-->
+<link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com/static/js/kf.js"></script>
+<!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+        <script type="text/javascript" src="//s19.cnzz.com/z_stat.php?id=1267958737&web_id=1267958737"></script>
+    </div>
